<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_pid"
        style="@style/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        tools:text="@string/performance_processid" />

    <TextView
        android:id="@+id/tv_packagename"
        style="@style/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:gravity="center"
        tools:text="@string/performance_packagename" />

    <TextView
        android:id="@+id/tv_cpuinfo"
        style="@style/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        tools:text="@string/performance_cpuindo" />

    <TextView
        android:id="@+id/tv_meminfo"
        style="@style/ItemText"
        tools:text="@string/performance_meminfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center" />


</LinearLayout>