<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="400dp"
    android:background="@color/window_body">

    <LinearLayout
        android:id="@+id/ll_pw_titlebar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/window_titlebar"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_closewindow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@color/red"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_listtitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/ll_pw_titlebar">

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/performance_processid" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@color/devider" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/performance_packagename" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@color/devider" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/performance_cpuindo" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@color/devider" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/performance_meminfo" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/devider"
        app:layout_constraintTop_toBottomOf="@id/ll_listtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_processlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ll_listtitle"
        app:layout_constraintStart_toStartOf="@id/ll_listtitle"
        app:layout_constraintTop_toBottomOf="@id/ll_listtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>