<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.debug.QuickActionsFragment">

    <ScrollView
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_rebootsystem"
                style="@style/BlueButton"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_reboot"
                android:drawablePadding="-40dp"
                android:paddingStart="30dp"
                android:text="@string/debug_reboot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btn_shutdown"
                style="@style/BlueButton"
                android:layout_marginStart="20dp"
                android:drawableStart="@drawable/ic_power"
                android:drawablePadding="-40dp"
                android:paddingStart="30dp"
                android:text="@string/debug_shutdown"
                app:layout_constraintBottom_toBottomOf="@id/btn_rebootsystem"
                app:layout_constraintStart_toEndOf="@id/btn_rebootsystem"
                app:layout_constraintTop_toTopOf="@id/btn_rebootsystem"
                tools:ignore="RtlSymmetry" />

            <Button
                android:drawableStart="@drawable/ic_performance"
                android:paddingStart="12dp"
                android:text="@string/debug_perfromance"
                android:id="@+id/btn_performancewindow"
                style="@style/BlueButton"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/btn_rebootsystem"
                app:layout_constraintTop_toBottomOf="@id/btn_rebootsystem"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>