<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.deviceinfo.DeviceBaseFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_device_baseinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_devicename"
                style="@style/DrawableText"
                android:layout_marginTop="10dp"
                app:drawableStartCompat="@drawable/ic_device" />

            <TextView
                android:id="@+id/tv_battery"
                style="@style/DrawableText"
                android:layout_marginTop="10dp"
                app:drawableStartCompat="@drawable/ic_battery" />

            <TextView
                android:id="@+id/id_tv_androidversion"
                style="@style/DrawableText"
                android:layout_marginTop="10dp"
                android:text="@string/device_android"
                app:drawableStartCompat="@drawable/ic_androidbot" />

            <TextView
                android:id="@+id/tv_processor"
                style="@style/DrawableText"
                android:layout_marginTop="10dp"
                app:drawableStartCompat="@drawable/ic_processor" />

            <TextView
                android:id="@+id/tv_buildnumber"
                style="@style/DrawableText"
                android:layout_marginTop="10dp"
                android:text="@string/device_buildnumber"
                app:drawableStartCompat="@drawable/ic_buildnumber" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/sb_deviceram"
                    style="@style/RamSeekBar"
                    android:layout_width="300dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:max="100"
                    android:progress="50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_raminfo"
                    style="@style/ItemText"
                    android:layout_marginStart="10dp"
                    android:text="@string/device_raminfo"
                    app:layout_constraintBottom_toBottomOf="@id/sb_deviceram"
                    app:layout_constraintStart_toEndOf="@id/sb_deviceram"
                    app:layout_constraintTop_toTopOf="@id/sb_deviceram" />

                <ProgressBar
                    android:id="@+id/sb_devicerom"
                    style="@style/RamSeekBar"
                    android:layout_width="300dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:max="100"
                    android:progress="50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sb_deviceram" />

                <TextView
                    android:id="@+id/tv_rominfo"
                    style="@style/ItemText"
                    android:layout_marginStart="10dp"
                    android:text="@string/device_rominfo"
                    app:layout_constraintBottom_toBottomOf="@id/sb_devicerom"
                    app:layout_constraintStart_toEndOf="@id/sb_devicerom"
                    app:layout_constraintTop_toTopOf="@id/sb_devicerom" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>